; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_cookie.c_cookiehash.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_cookie.c_cookiehash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*)* @cookiehash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @cookiehash(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i64 @isip(i8* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %8, %1
  store i64 0, i64* %2, align 8
  br label %19

13:                                               ; preds = %8
  %14 = load i8*, i8** %3, align 8
  %15 = call i8* @get_top_domain(i8* %14, i64* %5)
  store i8* %15, i8** %4, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = load i64, i64* %5, align 8
  %18 = call i64 @cookie_hash_domain(i8* %16, i64 %17)
  store i64 %18, i64* %2, align 8
  br label %19

19:                                               ; preds = %13, %12
  %20 = load i64, i64* %2, align 8
  ret i64 %20
}

declare dso_local i64 @isip(i8*) #1

declare dso_local i8* @get_top_domain(i8*, i64*) #1

declare dso_local i64 @cookie_hash_domain(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
